// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": null,
      "fontSize": 42.3,
      "fontWeight": "700",
      "lineHeight": 53.82,
    }
  }
>
  "God is most glorified in us when we are most satisfied in Him" ― John Piper
</Text>
`;

exports[`the H2 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": null,
      "fontSize": 42.3,
      "fontWeight": "700",
      "lineHeight": 53.82,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H2 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": null,
      "fontSize": 42.3,
      "fontWeight": "700",
      "lineHeight": 53.82,
    }
  }
>
  Default H2 text
</Text>
`;
